option java_package = "org.ibm.developerworks";

option java_outer_classname = "getRowCount";
option java_generic_services = true;
option optimize_for = SPEED;

message getRowCountRequest{
 required bool reCount = 1;
}

message getRowCountResponse {
 optional int64 rowCount = 1;
}


service ibmDeveloperWorksService {
 rpc getRowCount(getRowCountRequest)
 returns(getRowCountResponse);
}